Improvements in branch initialization. Now There is a Jet cut for presence of quarkonia. Changed to C++14.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,8 @@
 				"--glibs`",
 				"-lRooFit",
 				"-lRooFitCore",
-				"-lMinuit"
+				"-lMinuit",
+				"-std=c++14"
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
