changed parameter sigma_2 to x. Support for initial guess. Now results got to subfolders. Simplified OniaMassFitter class.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "typeinfo": "cpp",
         "SkimTree.C": "cpp",
         "list": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "allocator": "cpp",
+        "cstring": "cpp"
     }
 }
