Factorized functions to Utils. Reincorporated selection cuts in fitting. Renamed some variables in draw. Added multifit script. Simplified launching scripts. Added buttons to vscode bar.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,18 @@
                 "name": "FIT",
                 "color": "white",
                 "command": "./fit.sh", // This is executed in the terminal.
+            },
+            {
+                "cwd": "${workspaceFolder}",     // Terminal initial folder ${workspaceFolder} and os user home as defaults
+                "name": "DRAW",
+                "color": "white",
+                "command": "./draw.sh", // This is executed in the terminal.
+            },
+            {
+                "cwd": "${workspaceFolder}",     // Terminal initial folder ${workspaceFolder} and os user home as defaults
+                "name": "COMPILE ALL",
+                "color": "white",
+                "command": "./compileall.sh", // This is executed in the terminal.
             }
         ]
     }
