added build scripts. Refactored Drawing.cpp. Added prescale option for cutters. Refactored Skimmer.h and all cutters. Disabled jet skimmer in Skimming.cpp. fitParams serialization. fit results now is output as a file in Fitting.cpp.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,27 @@
 			"command": "./compileall.sh",
 			"problemMatcher": [],
 			"group": "build"
+		},
+		{
+			"type": "shell",
+			"label": "C++: build skim",
+			"command": "./buildskim.sh",
+			"problemMatcher": [],
+			"group": "build"
+		},
+		{
+			"type": "shell",
+			"label": "C++: build fit",
+			"command": "./buildfit.sh",
+			"problemMatcher": [],
+			"group": "build"
+		},
+		{
+			"type": "shell",
+			"label": "C++: build draw",
+			"command": "./builddraw.sh",
+			"problemMatcher": [],
+			"group": "build"
 		}
 	]
 }
