Implemented additional function in Drawing for fit parameters comparison. Deserialization of fitParams. Adjusted multifit and fit scripts for auto-draw all. std::cout and std::cerr log file generation implemented now in bash. Multifit now work with job system.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,13 @@
 		},
 		{
 			"type": "shell",
+			"label": "C++: multi fit",
+			"command": "./multifit.sh",
+			"problemMatcher": [],
+			"group": "build"
+		},
+		{
+			"type": "shell",
 			"label": "C++: draw",
 			"command": "./draw.sh",
 			"problemMatcher": [],
