fit config file generation. Added more graphs. fixed a bug. Changed some limits.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -56,6 +56,13 @@
 			"command": "./builddraw.sh",
 			"problemMatcher": [],
 			"group": "build"
+		},
+		{
+			"type": "shell",
+			"label": "C++: fitconf Generation",
+			"command": "./fitconfGen.sh",
+			"problemMatcher": [],
+			"group": "build"
 		}
 	]
 }
