moved some Utils code to OniaBase new static lib.

--- a/Skimming/makefile
+++ b/Skimming/makefile
@@ -2,7 +2,7 @@
 FLAGS=-g -o
 SOURCES:=$(wildcard *.cpp)
 HEADERS:=$(wildcard *.h)
-STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a
+STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a ../OniaBase/libOniaBase.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
 OUTPUT:=skim
@@ -15,6 +15,9 @@ skim : ${SOURCES} ${HEADERS} ${STATICLIBS}
 
 ../Utils/libUtils.a :
 	$(MAKE) -C ../Utils
+
+../OniaBase/libOniaBase.a :
+	$(MAKE) -C ../OniaBase
 
 clear :
 	rm skim
