--- a/OniaBase/makefile
+++ b/OniaBase/makefile
@@ -1,7 +1,7 @@
 
 FLAGS=-g -c
-SOURCES:=$(wildcard *.cpp)
-HEADERS:=$(wildcard *.h)
+SOURCES:=$(shell find . -name  "*.cpp")
+HEADERS:=$(shell find . -name  "*.h")
 STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 ROOTLIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
@@ -11,7 +11,7 @@ libOniaBase.a : ${SOURCES} ${HEADERS} ${STATICLIBS}
 	g++ ${SOURCES} ${INC} ${ROOTLIBS} ${LIBS} ${FLAGS}
 	ar xv ../Utils/libUtils.a
 	ar xv ../TreeProcessor/libTreeProcessor.a
-	ar rcs ${OUTPUT} *.o 
+	ar rcs ${OUTPUT} *.o
 	rm -f *.o
 
 ../TreeProcessor/libTreeProcessor.a :
