--- a/Skimming/makefile
+++ b/Skimming/makefile
@@ -1,7 +1,7 @@
 
 FLAGS=-g -o
-SOURCES:=$(wildcard *.cpp)
-HEADERS:=$(wildcard *.h)
+SOURCES:=$(shell find . -name  "*.cpp")
+HEADERS:=$(shell find . -name  "*.h")
 STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a ../OniaBase/libOniaBase.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
