Added inputs and outputs for jets. Moved JEC to OniaBase. CutParams refactoring.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,10 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/Skimming/skim",
-            "args": ["../rootfiles/merged_HiForestAOD.root", 
-                    "files/merged_HiForestAOD_skimmed.root",
-                    "../rootfiles/merged_HiForestAOD.txt"],
+            "args": ["-jet",
+                    "../rootfiles/datasets/merged_HiForestAOD_MCFix2.root", 
+                    "/media/luisg/ALMACEN/rootfiles/skims/merged_HiForestAOD_MCFix2_skim_test/merged_HiForestAOD_MCFix2_skim.root",
+                    "../rootfiles/confFiles/merged_HiForestAOD_MC.cutconf"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
