Added script for setting compiler settings and Separated jet ref from reco. Some first refactoring in OniaWriter.

--- a/AccEff/makefile
+++ b/AccEff/makefile
@@ -1,5 +1,5 @@
 
-FLAGS=-g -o
+FLAGS=$(shell ../HelperScripts/compilerFlags.sh ) -o
 SOURCES:=$(wildcard *.cpp)
 HEADERS:=$(wildcard *.h)
 STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a ../OniaBase/libOniaBase.a
