--- a/OniaBase/makefile
+++ b/OniaBase/makefile
@@ -5,13 +5,14 @@ HEADERS:=$(shell find . -name  "*.h")
 STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 ROOTLIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
-OUTPUT:=libOniaBase.a
+OUTPUT:=libOniaBase
 
 libOniaBase.a : ${SOURCES} ${HEADERS} ${STATICLIBS}
 	g++ ${SOURCES} ${INC} ${ROOTLIBS} ${LIBS} ${FLAGS}
 	ar xv ../Utils/libUtils.a
 	ar xv ../TreeProcessor/libTreeProcessor.a
-	ar rcs ${OUTPUT} *.o
+	ar rcs ${OUTPUT}.a *.o
+	objdump -d -S -Mintel --no-show-raw-insn ${OUTPUT}.a > ${OUTPUT}.s
 	rm -f *.o
 
 ../TreeProcessor/libTreeProcessor.a :
@@ -21,4 +22,4 @@ libOniaBase.a : ${SOURCES} ${HEADERS} ${STATICLIBS}
 	$(MAKE) -C ../Utils
 
 clear :
-	rm -f libOniaBase.a *.o
+	rm -f libOniaBase.a *.o *.s
