--- a/Utils/makefile
+++ b/Utils/makefile
@@ -4,12 +4,13 @@ SOURCES:=$(wildcard *.cpp)
 HEADERS:=$(wildcard *.h)
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
-OUTPUT:=libUtils.a
+OUTPUT:=libUtils
 
 libUtils.a : ${SOURCES} ${HEADERS}
-	g++ ${SOURCES} ${INC} ${LIBS} ${FLAGS}
-	ar rcs ${OUTPUT} *.o
+	g++ ${SOURCES} ${INC} ${FLAGS}
+	ar rcs ${OUTPUT}.a *.o
+	objdump -d -S -Mintel --no-show-raw-insn ${OUTPUT}.a > ${OUTPUT}.s
 	rm -f *.o
 
 clear :
-	rm -f libUtils.a *.o
+	rm -f libUtils.a *.o *.s
