--- a/Drawing/makefile
+++ b/Drawing/makefile
@@ -1,11 +1,11 @@
 
 FLAGS=$(shell ../HelperScripts/compilerFlags.sh ) -c
-SOURCES:=$(wildcard *.cpp)
-HEADERS:=$(wildcard *.h)
+SOURCES:=$(shell find . -name  "*.cpp")
+HEADERS:=$(shell find . -name  "*.h")
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 OUTPUT:=libDrawing
 
-draw : ${SOURCES} ${HEADERS} ${STATICLIBS}
+${OUTPUT}.a : ${SOURCES} ${HEADERS}
 	g++ ${SOURCES} ${INC} ${FLAGS}
 	ar rcs ${OUTPUT}.a *.o
 	objdump $(shell ../HelperScripts/objdumpFlags.sh) ${OUTPUT}.a > ${OUTPUT}.s
