changed inputs of Fit function. changed DrawCmp input, now is path. added prefix support for addOutputs.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,14 @@
 		{
 			"type": "shell",
 			"label": "C++: skim",
-			"command": "./skim.sh;",
+			"command": "./skim.sh -skim",
 			"problemMatcher": [],
 			"group": "build"
 		},
 		{
 			"type": "shell",
 			"label": "C++: skim jet",
-			"command": "./skim.sh -jet;",
+			"command": "./skim.sh -skimjet",
 			"problemMatcher": [],
 			"group": "build"
 		},
