Moved treeProcessor to OniaBase, other directory changes.

--- a/AccEff/makefile
+++ b/AccEff/makefile
@@ -2,7 +2,7 @@
 FLAGS=$(shell ../HelperScripts/compilerFlags.sh ) -o
 SOURCES:=$(shell find . -name  "*.cpp")
 HEADERS:=$(shell find . -name  "*.h")
-STATICLIBS:=../Utils/libUtils.a ../TreeProcessor/libTreeProcessor.a ../OniaBase/libOniaBase.a
+STATICLIBS:=../Utils/libUtils.a ../OniaBase/libOniaBase.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
 OUTPUT:=acceff
@@ -10,9 +10,6 @@ OUTPUT:=acceff
 acceff : ${SOURCES} ${HEADERS} ${STATICLIBS}
 	g++ ${SOURCES} ${STATICLIBS} ${INC} ${LIBS} ${FLAGS} ${OUTPUT}
 	objdump $(shell ../HelperScripts/objdumpFlags.sh) ${OUTPUT} > ${OUTPUT}.s
-
-../TreeProcessor/libTreeProcessor.a :
-	$(MAKE) -C ../TreeProcessor
 
 ../Utils/libUtils.a :
 	$(MAKE) -C ../Utils
