--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,35 +4,35 @@
 		{
 			"type": "shell",
 			"label": "C++: skim",
-			"command": "./skim.sh -skim",
+			"command": "time ./skim.sh -skim",
 			"problemMatcher": [],
 			"group": "build"
 		},
 		{
 			"type": "shell",
 			"label": "C++: skim jet",
-			"command": "./skim.sh -skimjet",
+			"command": "time ./skim.sh -skimjet",
 			"problemMatcher": [],
 			"group": "build"
 		},
 		{
 			"type": "shell",
 			"label": "C++: acceff",
-			"command": "./acceff.sh;",
+			"command": "time ./acceff.sh;",
 			"problemMatcher": [],
 			"group": "build"
 		},
 		{
 			"type": "shell",
 			"label": "C++: fit",
-			"command": "./fit.sh",
+			"command": "time ./fit.sh",
 			"problemMatcher": [],
 			"group": "build"
 		},
 		{
 			"type": "shell",
 			"label": "C++: multi fit",
-			"command": "./multifit.sh",
+			"command": "time ./multifit.sh",
 			"problemMatcher": [],
 			"group": "build"
 		},
