--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "g++ skim debug",
             "type": "cppdbg",
@@ -57,6 +58,26 @@
             "args": ["files/merged_HiForestAOD_skimmed.root", 
                 "files/test/merged_HiForestAOD_skimmed.root",
                 "files/test/merged_HiForestAOD_fit.txt"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Habilitar la impresión con sangría para gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "g++ Utils test debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Utils/test",
+            "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
