Created class for testing. Added getInt for ParameterGroup. CutParams updated to new ParameterGroup usage.

--- a/Utils/makefile
+++ b/Utils/makefile
@@ -1,7 +1,7 @@
 
 FLAGS:=$(shell ../HelperScripts/compilerFlags.sh ) -c
 TESTFLAGS:=$(shell ../HelperScripts/compilerFlags.sh ) -o
-SOURCES:=$(shell find ./Helpers ./Serialization -name  "*.cpp")
+SOURCES:=$(shell find ./Helpers ./Serialization ./Tester -name  "*.cpp")
 HEADERS:=$(shell find ./Helpers ./Serialization -name  "*.h")
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
