First tests in OniaBase Params. Improved Tester.

--- a/OniaBase/makefile
+++ b/OniaBase/makefile
@@ -1,14 +1,17 @@
 
 FLAGS=$(shell ../HelperScripts/compilerFlags.sh ) -c
-SOURCES:=$(shell find . -name  "*.cpp")
-HEADERS:=$(shell find . -name  "*.h")
+TESTFLAGS:=$(shell ../HelperScripts/compilerFlags.sh ) -o
+SOURCES:=$(shell find . -name  "*.cpp" ! -path "./Test/*")
+HEADERS:=$(shell find . -name  "*.h" ! -path "./Test/*")
 STATICLIBS:=../Utils/libUtils.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
-ROOTLIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
+LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
 OUTPUT:=libOniaBase
 
+all : libOniaBase.a test
+
 libOniaBase.a : ${SOURCES} ${HEADERS} ${STATICLIBS}
-	g++ ${SOURCES} ${INC} ${ROOTLIBS} ${LIBS} ${FLAGS}
+	g++ ${SOURCES} ${INC} ${LIBS} ${FLAGS}
 	ar xv ../Utils/libUtils.a
 	ar rcs ${OUTPUT}.a *.o
 	objdump $(shell ../HelperScripts/objdumpFlags.sh) ${OUTPUT}.a > ${OUTPUT}.s
@@ -19,3 +22,7 @@ libOniaBase.a : ${SOURCES} ${HEADERS} ${STATICLIBS}
 
 clear :
 	rm -f libOniaBase.a *.o *.s
+	rm test
+
+test : Test/Test.cpp libOniaBase.a
+	g++ Test/Test.cpp libOniaBase.a ${INC} ${LIBS} ${TESTFLAGS} test
