--- a/Fitting/makefile
+++ b/Fitting/makefile
@@ -8,6 +8,9 @@ INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
 OUTPUT:=fit
 
+all: fit test
+	./test
+
 fit : ${SOURCES} ${HEADERS} ${STATICLIBS}
 	g++ ${SOURCES} ${STATICLIBS} ${INC} ${LIBS} ${FLAGS} ${OUTPUT}
 	objdump $(shell ../HelperScripts/objdumpFlags.sh) ${OUTPUT} > ${OUTPUT}.s
@@ -25,4 +28,4 @@ test : ${TESTSOURCES} ${HEADERS} ${STATICLIBS}
 	g++ ${TESTSOURCES} ${STATICLIBS} ${INC} ${LIBS} ${FLAGS} test
 
 clear :
-	rm -f fit *.o *.s
+	rm -f fit test *.o *.s
