fit reordered arguments. Set y to abs(y) in OniaMassFit. setup added sample fit output. DrawCmp corrected and simplified to new ParameterGroup. Corrected cut parameters in plots in DrawPlot. Corrected bug in ParameterGroup::addGroup.

--- a/OniaBase/makefile
+++ b/OniaBase/makefile
@@ -23,7 +23,7 @@ libOniaBase.a : ${SOURCES} ${HEADERS} ${STATICLIBS}
 
 clear :
 	rm -f libOniaBase.a *.o *.s
-	rm test
+	rm -f test
 
 test : Test/Test.cpp libOniaBase.a
 	g++ Test/Test.cpp libOniaBase.a ${INC} ${LIBS} ${TESTFLAGS} test
