added timing of acceff. Moved AccEff draw functions to Drawing. Tree processor now flushes output to keep interactive in timing.

--- a/AccEff/makefile
+++ b/AccEff/makefile
@@ -2,7 +2,7 @@
 FLAGS=$(shell ../HelperScripts/compilerFlags.sh ) -o
 SOURCES:=$(shell find . -name  "*.cpp")
 HEADERS:=$(shell find . -name  "*.h")
-STATICLIBS:=../Utils/libUtils.a ../OniaBase/libOniaBase.a
+STATICLIBS:=../Utils/libUtils.a ../OniaBase/libOniaBase.a ../Drawing/libDrawing.a
 INC:=-I $(shell $(ROOTSYS)/bin/root-config --cflags)
 LIBS:=$(shell $(ROOTSYS)/bin/root-config --ldflags --glibs) -lRooFit -lRooFitCore -lMinuit
 OUTPUT:=acceff
@@ -16,6 +16,9 @@ acceff : ${SOURCES} ${HEADERS} ${STATICLIBS}
 
 ../OniaBase/libOniaBase.a :
 	$(MAKE) -C ../OniaBase
+
+../Drawing/libDrawing.a :
+	$(MAKE) -C ../Drawing
 
 clear :
 	rm -f acceff *.o *.s
