Readded exp cheb and exp fit bkg funcs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,9 @@
         "locale": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "strstream": "cpp"
+        "strstream": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
